jar形式でビルドと実行ができるようにbuild.gradle.ktsを設定

--- a/_doc/memo/アプリケーション実行.md
+++ b/_doc/memo/アプリケーション実行.md
@@ -42,6 +42,41 @@ $ ls -l build/libs/stockTrace-1.0-SNAPSHOT.jar
 -rw-r--r--  1 gyamin  staff  33714  4  1 01:02 build/libs/stockTrace-1.0-SNAPSHOT.jar
 ```
 
+## 実行
+
+`./gradlew run`
+```
+$ ./gradlew run
+
+> Task :run FAILED
+処理種別が指定されていません。
+FAILURE: Build failed with an exception.
+
+* What went wrong:
+Execution failed for task ':run'.
+> Process 'command '/Users/gyamin/.sdkman/candidates/java/16.0.1.hs-adpt/bin/java'' finished with non-zero exit value 9
+...
+```
+
+#### gradleコマンドで実行
+```
+$ ./gradlew run
+
+> Task :run FAILED
+処理種別が指定されていません。
+FAILURE: Build failed with an exception.
+
+* What went wrong:
+Execution failed for task ':run'.
+> Process 'command '/Users/gyamin/.sdkman/candidates/java/16.0.1.hs-adpt/bin/java'' finished with non-zero exit value 9
+...
+```
+
+#### jarファイルで実行
+```
+$ java -jar ./build/libs/stockTrace-1.0-SNAPSHOT.jar 
+処理種別が指定されていません。
+```
 
 ## jarファイルを実行するまでの苦労
 
