スレッドを分けて株価情報を収集した結果を配列に保持したが、クリアできていなかったため、データが重複していた。初期化するように変更。

--- a/_doc/サーバ環境セットアップ.md
+++ b/_doc/サーバ環境セットアップ.md
@@ -3,23 +3,39 @@
 ## 概要
 アプリケーションをさくらVPS上のLinuxサーバで実行するために、必要な手順を記載する。
 
+## セットアップ手順
+
+### リポジトリクローンからビルドまで
+```
+$ cd develop/repos/
+$ git clone git@github.com:gyamin/stocktrace.git
+
+$ ./gradlew build -x test
+```
+
 ## アプリケーション配置
 
-#### アプリケーション配置ディレクトリ作成
+### アプリケーション配置ディレクトリ作成
 ```
-# cd /opt/apps/
-# mkdir stocktrace
-```
-
-#### Mac端末よりビルド済みjarファイルをscp転送
-```
-$ scp build/libs/stockTrace-1.0-SNAPSHOT.jar kinoko-center.com:/opt/apps/stocktrace
-stockTrace-1.0-SNAPSHOT.jar                                                           100%   14MB   9.1MB/s   00:01 
+$ sudo mkdir -p /opt/apps/stocktrace
+$ sudo chown -R ubuntu:ubuntu /opt/apps/stocktrace/
 ```
 
-#### 転送ファイル確認
+### ビルドファイルを配置
 ```
-# ls -l stocktrace/
-total 14440
--rw-r--r-- 1 root root 14784877 Apr  5 01:33 stockTrace-1.0-SNAPSHOT.jar
+$ cp develop/repos/stocktrace/build/libs/stockTrace-1.0-SNAPSHOT.jar /opt/apps/stocktrace/
+$ cp develop/repos/stocktrace/application.properties.prd /opt/apps/stocktrace/
+$ cp develop/repos/stocktrace/_infra/db/data/data_j.csv /opt/apps/stocktrace
+$ cd /opt/apps/stocktrace/
+```
+
+## アプリケーション実行
+- 銘柄マスタファイル取り込み
+```
+$ java -jar stockTrace-1.0-SNAPSHOT.jar registerMaster
+```
+
+- 株価情報クローリング
+```
+$ java -jar stockTrace-1.0-SNAPSHOT.jar crawling
 ```
