#8 WIP: webpack導入 scssをビルドできるように設定

--- a/web/_doc/開発環境.md
+++ b/web/_doc/開発環境.md
@@ -16,3 +16,24 @@
 % pip install mysql-connector-python
 % pip install python-dotenv
 ```
+
+
+## webフロント開発
+
+```
+% cd assets
+% nodenv local 16.17.0
+% npm init -y 
+% npm install --save-dev webpack webpack-cli
+% npm install --save-dev css-loader sass-loader sass mini-css-extract-plugin
+```
+
+### フロントビルド
+```
+% npm run build
+...
+  ./src/index.js 55 bytes [built] [code generated]
+  css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/css/header.scss 26 bytes [built] [code generated]
+  css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/css/footer.scss 26 bytes [built] [code generated]
+webpack 5.74.0 compiled successfully in 303 ms
+```
