--- a/web/_doc/開発環境.md
+++ b/web/_doc/開発環境.md
@@ -13,10 +13,20 @@
 ```
 % pip install Flask
 % pip install SQLAlchemy
+% pip install psycopg2-binary
 % pip install mysql-connector-python
 % pip install python-dotenv
 ```
 
+## Flask実行
+```
+% python app.py 
+ * Serving Flask app 'app'
+ * Debug mode: off
+WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
+ * Running on http://127.0.0.1:5000
+Press CTRL+C to quit
+```
 
 ## webフロント開発
 
