#8 WIP: vueの導入に苦心中。。。

--- a/web/_doc/開発環境.md
+++ b/web/_doc/開発環境.md
@@ -29,6 +29,8 @@ Press CTRL+C to quit
 
 ## webフロント開発
 
+### CSS開発
+sass導入
 ```
 % cd assets
 % nodenv local 16.17.0
@@ -37,7 +39,14 @@ Press CTRL+C to quit
 % npm install --save-dev css-loader sass-loader sass mini-css-extract-plugin
 ```
 
-### フロントビルド
+### JS開発
+vue導入
+```
+% npm install --save-dev vue
+```
+
+
+### ビルド
 ```
 % npm run build
 ...
