#8 TOP画面レイアウト修正

--- a/web/_doc/開発環境.md
+++ b/web/_doc/開発環境.md
@@ -27,6 +27,17 @@ WARNING: This is a development server. Do not use it in a production deployment.
 Press CTRL+C to quit
 ```
 
+## pipパッケージ管理
+#### パッケージ一覧をファイル出力
+```
+% pip freeze > requirements.txt
+```
+
+#### パッケージ一覧ファイルからパッケージインストール
+```
+% pip install -r requirements.txt
+```
+
 ## webフロント開発
 
 ### CSS開発
