--- a/web/_doc/開発環境.md
+++ b/web/_doc/開発環境.md
@@ -1,20 +1,23 @@
 
 ## Python実行環境
+
+### python と venvのセットアップ
 ```
-% pwd   
-/xxx/stocktrace/web
-% pyenv virtualenv 3.10.7 stocktrace
-% pyenv local stocktrace
 % pyenv versions
-* stocktrace (set by /Users/gyamin/Develop/repos/stocktrace/web/.python-version)
+* system (set by /Users/nogami/.pyenv/version)
+  3.10.10
+
+% pyenv local 3.10.10
+% python -V
+Python 3.10.10
+
+% python -m venv .venv
+% source .venv/bin/activate
 ```
 
-## Flaskなどのライブラリインストール
+### pipパッケージのインストール
 ```
-% pip install Flask
-% pip install SQLAlchemy
-% pip install psycopg2-binary
-% pip install python-dotenv
+% pip install Flask SQLAlchemy psycopg2-binary python-dotenv
 ```
 
 ## Flask実行
@@ -25,7 +28,7 @@
 WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
  * Running on http://127.0.0.1:5000
 Press CTRL+C to quit
-```
+``` 
 
 ## pipパッケージ管理
 #### パッケージ一覧をファイル出力
@@ -44,7 +47,10 @@ Press CTRL+C to quit
 sass導入
 ```
 % cd assets
-% nodenv local 16.17.0
+% nodenv local 16.20.0
+% node -v
+v16.20.0
+
 % npm init -y 
 % npm install --save-dev webpack webpack-cli
 % npm install --save-dev css-loader sass-loader sass mini-css-extract-plugin
@@ -66,4 +72,24 @@ vue導入
   css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/css/header.scss 26 bytes [built] [code generated]
   css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/css/footer.scss 26 bytes [built] [code generated]
 webpack 5.74.0 compiled successfully in 303 ms
+```
+
+## dokcer環境
+
+### flaskとdbの2コンテナ起動
+```
+% docker-compose up -d  
+...
+[+] Running 2/2
+ ✔ Container stock_trace_python  Started                                                                                                                                                                                        0.3s 
+ ✔ Container stock_trace_db      Started   
+```
+
+### dbコンテナのみ起動
+```
+% docker-compose up -d stock_trace_db
+...
+[+] Running 2/2
+ ✔ Network docker_default    Created                                                                                                                                                                                            0.0s 
+ ✔ Container stock_trace_db  Started   
 ```
