--- a/batch/_doc/memo/アプリケーション実行.md
+++ b/batch/_doc/memo/アプリケーション実行.md
@@ -2,15 +2,19 @@
 
 ## 開発環境構築(Mac)
 ```
-$ sdk install kotlin 1.6.10
+% sdk install java 17.0.10-jbr
 ```
 
 ```
-$ sdk current
+% sdk current
 Using:
-java: 16.0.1.hs-adpt
-kotlin: 1.6.10
+java: 17.0.10-jbr
 ```
+
+## IntelliJ 設定
+gradleのjvmをsdkmanでインストールしたjdkに設定。これで、Run/Debugから実行ができようになる。
+![2024-03-11_13.58.01.png](img/2024-03-11_13.58.01.png)
+![2024-03-11_13.59.49.png](img/2024-03-11_13.59.49.png)
 
 ## ビルド
 
