--- a/batch/_doc/memo/開発環境構築、アプリケーション実行.md
+++ b/batch/_doc/memo/開発環境構築、アプリケーション実行.md
@@ -1,20 +1,33 @@
-# アプリケーション実行方法
+# 開発環境構築、アプリケーション実行
 
 ## 開発環境構築(Mac)
+
+### インストール候補
 ```
-% sdk install java 17.0.10-jbr
+% sdk list java
+
+================================================================================
+Available Java Versions for macOS ARM 64bit
+================================================================================
+ Vendor        | Use | Version      | Dist    | Status     | Identifier
+--------------------------------------------------------------------------------
+ Corretto      |     | 22.0.1       | amzn    |            | 22.0.1-amzn         
+               |     | 21.0.3       | amzn    |            | 21.0.3-amzn         
+               |     | 17.0.11      | amzn    |            | 17.0.11-amzn        
+               |     | 11.0.23      | amzn    |            | 11.0.23-amzn        
+...
 ```
 
+### 特定バージョンインストール
 ```
-% sdk current
-Using:
-java: 17.0.10-jbr
+% sdk install java 21.0.2-open
 ```
 
 ## IntelliJ 設定
 gradleのjvmをsdkmanでインストールしたjdkに設定。これで、Run/Debugから実行ができようになる。
-![2024-03-11_13.58.01.png](img/2024-03-11_13.58.01.png)
-![2024-03-11_13.59.49.png](img/2024-03-11_13.59.49.png)
+![2024-05-28_2.07.40.png](./img/2024-05-28_2.07.40.png)
+![2024-05-28_2.07.57.png](./img/2024-05-28_2.07.57.png)
+![2024-05-28_2.08.30.png](./img/2024-05-28_2.08.30.png)
 
 ## ビルド
 
